@startuml
!define table(x) class x << (T,#FFEEDD) >>
!define pk(x) <color:red><b>PK</b></color> x
!define fk(x) <color:blue><b>FK</b></color> x

hide methods
hide stereotypes

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

table(Persona) {
    pk(id_persona) INT
    nombre VARCHAR(100)
    email VARCHAR(150)
    telefono VARCHAR(20)
    fecha_registro DATE
}

table(Comercial) {
    pk(id_comercial) INT
    fk(id_persona) INT
    codigo_comercial VARCHAR(20)
    apellidos VARCHAR(100)
    zona_geografica VARCHAR(100)
    fecha_alta DATE
}

table(ClientePotencial) {
    pk(id_potencial) INT
    fk(id_persona) INT
    empresa VARCHAR(150)
    fuente_captacion VARCHAR(100)
    estado ENUM
    fecha_primer_contacto DATE
    fk(id_comercial) INT
}

table(ClienteFormal) {
    pk(id_formal) INT
    fk(id_persona) INT
    codigo_cliente VARCHAR(20)
    nif_cif VARCHAR(15)
    razon_social VARCHAR(200)
    direccion_fiscal VARCHAR(255)
    condiciones_pago ENUM
    descuento_habitual DECIMAL
    estado ENUM
}

table(Pedido) {
    pk(id_pedido) INT
    fecha_pedido DATE
    fk(id_cliente_formal) INT
    fk(id_comercial) INT
    estado ENUM
}

table(LineaPedido) {
    pk(id_pedido) INT
    pk(id_linea) INT
    fk(id_producto) INT
    cantidad INT
    precio_unitario DECIMAL
    descuento_linea DECIMAL
}

table(Producto) {
    pk(id_producto) INT
    codigo VARCHAR(20)
    nombre VARCHAR(150)
    descripcion TEXT
    precio_unitario DECIMAL
    stock INT
    categoria VARCHAR(100)
}

table(Factura) {
    pk(id_factura) INT
    numero_factura VARCHAR(30)
    fecha_emision DATE
    fecha_vencimiento DATE
    fk(id_cliente_formal) INT
    fk(id_pedido) INT
    base_imponible DECIMAL
    tipo_iva DECIMAL
    total DECIMAL
    estado ENUM
}

table(AuditoriaFactura) {
    pk(id_auditoria) INT
    fk(id_factura) INT
    estado_anterior VARCHAR(20)
    estado_nuevo VARCHAR(20)
    usuario VARCHAR(100)
    fecha_cambio DATETIME
}

' Relaciones
Persona  ||--o| Comercial        : "1..1"
Persona  ||--o| ClientePotencial : "1..1"
Persona  ||--o| ClienteFormal    : "1..1"

Comercial  ||--o{ ClientePotencial : "asigna"
Comercial  ||--o{ Pedido           : "gestiona"

ClienteFormal ||--o{ Pedido  : "realiza"
ClienteFormal ||--o{ Factura : "recibe"

Pedido   ||--o{ LineaPedido : "compone"
Pedido   ||--|| Factura     : "genera"

Producto ||--o{ LineaPedido : "incluye"

Factura  ||--o{ AuditoriaFactura : "audita"

@enduml
